--- a/index.html
+++ b/index.html
@@ -623,7 +623,7 @@ Neden Ekolojik Tarım? ETO Ekolojik Tarım Organizasyonu Derneği ekolojik ürü
 <center>
 <img src="img/instaicon.png" alt="logo" style="width:15%" />
 <h1>Resmi İnstagram Adresimiz</h1>
-<a href="https://www.instagram.com/makdis.gurme/"><h2>makdis.gurme</h2></a>
+<a href="https://www.instagram.com/makdis.gurme/" target="_blank"><h2>makdis.gurme</h2></a>
 </center>
 
 
@@ -636,7 +636,7 @@ Neden Ekolojik Tarım? ETO Ekolojik Tarım Organizasyonu Derneği ekolojik ürü
 
 <table width="90%">
   <tr>
-    <th scope="col"><a href="https://www.google.com.tr/maps/place/41%C2%B003'22.3%22N+28%C2%B059'27.6%22E/@41.0561973,28.9822462,15z/data=!3m1!4b1!4m9!1m2!2m1!1sosmanbey+melek+mescidi!3m5!1s0x0:0x0!7e2!8m2!3d41.0561817!4d28.9910011?hl=tr">
+    <th scope="col"><a href="https://www.google.com.tr/maps/place/41%C2%B003'22.3%22N+28%C2%B059'27.6%22E/@41.0561973,28.9822462,15z/data=!3m1!4b1!4m9!1m2!2m1!1sosmanbey+melek+mescidi!3m5!1s0x0:0x0!7e2!8m2!3d41.0561817!4d28.9910011?hl=tr" target="_blank">
 <img width="85%"src="img/map.png"  />
 </a>
 </th>
